Compiler/ppGOParser.py
# Generated from ppGO.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class ppGOParser ( Parser ):

    grammarFileName = "ppGO.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'int'", "'float'", "'string'", 
                     "'bool'", "'func'", "'('", "')'", "'{'", "'}'", "'['", 
                     "']'", "'+'", "'-'", "'*'", "'/'", "'<'", "'>'", "'<>'", 
                     "'=='", "'>='", "'<='", "'='", "','", "':'", "';'", 
                     "'AND'", "'OR'", "'if'", "'else'", "'else if'", "'program'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'usr_input'", 
                     "'loop'", "'print'", "'return'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "FUNCTION", "LEFT_PAR", 
                      "RIGHT_PAR", "LEFT_BRACKET", "RIGHT_BRACKET", "LEFT_SBRACKET", 
                      "RIGHT_SBRACKET", "PLUS", "MINUS", "TIMES", "DIVISION", 
                      "LESS_THAN", "GREATER_THAN", "NOT_EQUAL", "EQUAL_RELOP", 
                      "GREATER_EQUAL", "LESS_EQUAL", "EQUAL", "SEP_COMMA", 
                      "SEP_COLON", "SEP_SEMICOLON", "AND", "OR", "IF", "ELSE", 
                      "ELSEIF", "PROGRAM", "VAR_INT", "VAR_FLOAT", "VAR_BOOL", 
                      "INPUT", "LOOP", "PRINT", "RETURN", "LITERAL", "VAR_STRING", 
                      "WHITESPACE" ]

    RULE_program = 0
    RULE_main = 1
    RULE_modulo = 2
    RULE_tipo = 3
    RULE_args = 4
    RULE_body = 5
    RULE_block = 6
    RULE_varsDec = 7
    RULE_assigment = 8
    RULE_condition = 9
    RULE_elseif = 10
    RULE_elsee = 11
    RULE_expression = 12
    RULE_expression1 = 13
    RULE_exp = 14
    RULE_term = 15
    RULE_factor = 16
    RULE_loop = 17
    RULE_funcCall = 18
    RULE_read = 19
    RULE_print2 = 20
    RULE_return2 = 21

    ruleNames =  [ "program", "main", "modulo", "tipo", "args", "body", 
                   "block", "varsDec", "assigment", "condition", "elseif", 
                   "elsee", "expression", "expression1", "exp", "term", 
                   "factor", "loop", "funcCall", "read", "print2", "return2" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    FUNCTION=6
    LEFT_PAR=7
    RIGHT_PAR=8
    LEFT_BRACKET=9
    RIGHT_BRACKET=10
    LEFT_SBRACKET=11
    RIGHT_SBRACKET=12
    PLUS=13
    MINUS=14
    TIMES=15
    DIVISION=16
    LESS_THAN=17
    GREATER_THAN=18
    NOT_EQUAL=19
    EQUAL_RELOP=20
    GREATER_EQUAL=21
    LESS_EQUAL=22
    EQUAL=23
    SEP_COMMA=24
    SEP_COLON=25
    SEP_SEMICOLON=26
    AND=27
    OR=28
    IF=29
    ELSE=30
    ELSEIF=31
    PROGRAM=32
    VAR_INT=33
    VAR_FLOAT=34
    VAR_BOOL=35
    INPUT=36
    LOOP=37
    PRINT=38
    RETURN=39
    LITERAL=40
    VAR_STRING=41
    WHITESPACE=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(ppGOParser.PROGRAM, 0)

        def LITERAL(self):
            return self.getToken(ppGOParser.LITERAL, 0)

        def SEP_COLON(self):
            return self.getToken(ppGOParser.SEP_COLON, 0)

        def main(self):
            return self.getTypedRuleContext(ppGOParser.MainContext,0)


        def varsDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.VarsDecContext)
            else:
                return self.getTypedRuleContext(ppGOParser.VarsDecContext,i)


        def modulo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.ModuloContext)
            else:
                return self.getTypedRuleContext(ppGOParser.ModuloContext,i)


        def getRuleIndex(self):
            return ppGOParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ppGOParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(ppGOParser.PROGRAM)
            self.state = 45
            self.match(ppGOParser.LITERAL)
            self.state = 46
            self.match(ppGOParser.SEP_COLON)
            self.state = 50
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 47
                    self.varsDec() 
                self.state = 52
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 56
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 53
                    self.modulo() 
                self.state = 58
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 59
            self.main()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ppGOParser.FUNCTION, 0)

        def LEFT_PAR(self):
            return self.getToken(ppGOParser.LEFT_PAR, 0)

        def RIGHT_PAR(self):
            return self.getToken(ppGOParser.RIGHT_PAR, 0)

        def body(self):
            return self.getTypedRuleContext(ppGOParser.BodyContext,0)


        def getRuleIndex(self):
            return ppGOParser.RULE_main

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMain" ):
                listener.enterMain(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMain" ):
                listener.exitMain(self)




    def main(self):

        localctx = ppGOParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(ppGOParser.FUNCTION)
            self.state = 62
            self.match(ppGOParser.T__0)
            self.state = 63
            self.match(ppGOParser.LEFT_PAR)
            self.state = 64
            self.match(ppGOParser.RIGHT_PAR)
            self.state = 65
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModuloContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(ppGOParser.FUNCTION, 0)

        def LITERAL(self):
            return self.getToken(ppGOParser.LITERAL, 0)

        def LEFT_PAR(self):
            return self.getToken(ppGOParser.LEFT_PAR, 0)

        def args(self):
            return self.getTypedRuleContext(ppGOParser.ArgsContext,0)


        def RIGHT_PAR(self):
            return self.getToken(ppGOParser.RIGHT_PAR, 0)

        def body(self):
            return self.getTypedRuleContext(ppGOParser.BodyContext,0)


        def tipo(self):
            return self.getTypedRuleContext(ppGOParser.TipoContext,0)


        def getRuleIndex(self):
            return ppGOParser.RULE_modulo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModulo" ):
                listener.enterModulo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModulo" ):
                listener.exitModulo(self)




    def modulo(self):

        localctx = ppGOParser.ModuloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_modulo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ppGOParser.T__1) | (1 << ppGOParser.T__2) | (1 << ppGOParser.T__3) | (1 << ppGOParser.T__4))) != 0):
                self.state = 67
                self.tipo()


            self.state = 70
            self.match(ppGOParser.FUNCTION)
            self.state = 71
            self.match(ppGOParser.LITERAL)
            self.state = 72
            self.match(ppGOParser.LEFT_PAR)
            self.state = 73
            self.args()
            self.state = 74
            self.match(ppGOParser.RIGHT_PAR)
            self.state = 75
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ppGOParser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)




    def tipo(self):

        localctx = ppGOParser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_tipo)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ppGOParser.T__1) | (1 << ppGOParser.T__2) | (1 << ppGOParser.T__3) | (1 << ppGOParser.T__4))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.TipoContext)
            else:
                return self.getTypedRuleContext(ppGOParser.TipoContext,i)


        def LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(ppGOParser.LITERAL)
            else:
                return self.getToken(ppGOParser.LITERAL, i)

        def SEP_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ppGOParser.SEP_COMMA)
            else:
                return self.getToken(ppGOParser.SEP_COMMA, i)

        def getRuleIndex(self):
            return ppGOParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)




    def args(self):

        localctx = ppGOParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ppGOParser.T__1) | (1 << ppGOParser.T__2) | (1 << ppGOParser.T__3) | (1 << ppGOParser.T__4))) != 0):
                self.state = 79
                self.tipo()
                self.state = 80
                self.match(ppGOParser.LITERAL)
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==ppGOParser.SEP_COMMA:
                    self.state = 82
                    self.match(ppGOParser.SEP_COMMA)
                    self.state = 83
                    self.tipo()
                    self.state = 84
                    self.match(ppGOParser.LITERAL)
                    self.state = 90
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LEFT_BRACKET(self):
            return self.getToken(ppGOParser.LEFT_BRACKET, 0)

        def block(self):
            return self.getTypedRuleContext(ppGOParser.BlockContext,0)


        def RIGHT_BRACKET(self):
            return self.getToken(ppGOParser.RIGHT_BRACKET, 0)

        def varsDec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.VarsDecContext)
            else:
                return self.getTypedRuleContext(ppGOParser.VarsDecContext,i)


        def return2(self):
            return self.getTypedRuleContext(ppGOParser.Return2Context,0)


        def getRuleIndex(self):
            return ppGOParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = ppGOParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(ppGOParser.LEFT_BRACKET)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ppGOParser.T__1) | (1 << ppGOParser.T__2) | (1 << ppGOParser.T__3) | (1 << ppGOParser.T__4))) != 0):
                self.state = 94
                self.varsDec()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self.block()
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ppGOParser.RETURN:
                self.state = 101
                self.return2()


            self.state = 104
            self.match(ppGOParser.RIGHT_BRACKET)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcCall(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.FuncCallContext)
            else:
                return self.getTypedRuleContext(ppGOParser.FuncCallContext,i)


        def assigment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.AssigmentContext)
            else:
                return self.getTypedRuleContext(ppGOParser.AssigmentContext,i)


        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.ConditionContext)
            else:
                return self.getTypedRuleContext(ppGOParser.ConditionContext,i)


        def loop(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.LoopContext)
            else:
                return self.getTypedRuleContext(ppGOParser.LoopContext,i)


        def print2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.Print2Context)
            else:
                return self.getTypedRuleContext(ppGOParser.Print2Context,i)


        def read(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.ReadContext)
            else:
                return self.getTypedRuleContext(ppGOParser.ReadContext,i)


        def return2(self):
            return self.getTypedRuleContext(ppGOParser.Return2Context,0)


        def getRuleIndex(self):
            return ppGOParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = ppGOParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ppGOParser.IF) | (1 << ppGOParser.INPUT) | (1 << ppGOParser.LOOP) | (1 << ppGOParser.PRINT) | (1 << ppGOParser.LITERAL))) != 0):
                self.state = 112
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 106
                    self.funcCall()
                    pass

                elif la_ == 2:
                    self.state = 107
                    self.assigment()
                    pass

                elif la_ == 3:
                    self.state = 108
                    self.condition()
                    pass

                elif la_ == 4:
                    self.state = 109
                    self.loop()
                    pass

                elif la_ == 5:
                    self.state = 110
                    self.print2()
                    pass

                elif la_ == 6:
                    self.state = 111
                    self.read()
                    pass


                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 117
                self.return2()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsDecContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipo(self):
            return self.getTypedRuleContext(ppGOParser.TipoContext,0)


        def LITERAL(self, i:int=None):
            if i is None:
                return self.getTokens(ppGOParser.LITERAL)
            else:
                return self.getToken(ppGOParser.LITERAL, i)

        def SEP_COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ppGOParser.SEP_COMMA)
            else:
                return self.getToken(ppGOParser.SEP_COMMA, i)

        def LEFT_SBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(ppGOParser.LEFT_SBRACKET)
            else:
                return self.getToken(ppGOParser.LEFT_SBRACKET, i)

        def RIGHT_SBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(ppGOParser.RIGHT_SBRACKET)
            else:
                return self.getToken(ppGOParser.RIGHT_SBRACKET, i)

        def VAR_INT(self, i:int=None):
            if i is None:
                return self.getTokens(ppGOParser.VAR_INT)
            else:
                return self.getToken(ppGOParser.VAR_INT, i)

        def getRuleIndex(self):
            return ppGOParser.RULE_varsDec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarsDec" ):
                listener.enterVarsDec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarsDec" ):
                listener.exitVarsDec(self)




    def varsDec(self):

        localctx = ppGOParser.VarsDecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varsDec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.tipo()
            self.state = 136 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 121
                    self.match(ppGOParser.LITERAL)
                    self.state = 131
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==ppGOParser.LEFT_SBRACKET:
                        self.state = 122
                        self.match(ppGOParser.LEFT_SBRACKET)

                        self.state = 123
                        self.match(ppGOParser.VAR_INT)
                        self.state = 124
                        self.match(ppGOParser.RIGHT_SBRACKET)
                        self.state = 129
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==ppGOParser.LEFT_SBRACKET:
                            self.state = 126
                            self.match(ppGOParser.LEFT_SBRACKET)

                            self.state = 127
                            self.match(ppGOParser.VAR_INT)
                            self.state = 128
                            self.match(ppGOParser.RIGHT_SBRACKET)




                    self.state = 134
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==ppGOParser.SEP_COMMA:
                        self.state = 133
                        self.match(ppGOParser.SEP_COMMA)



                else:
                    raise NoViableAltException(self)
                self.state = 138 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssigmentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LITERAL(self):
            return self.getToken(ppGOParser.LITERAL, 0)

        def EQUAL(self):
            return self.getToken(ppGOParser.EQUAL, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(ppGOParser.ExpressionContext,i)


        def SEP_SEMICOLON(self):
            return self.getToken(ppGOParser.SEP_SEMICOLON, 0)

        def LEFT_SBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(ppGOParser.LEFT_SBRACKET)
            else:
                return self.getToken(ppGOParser.LEFT_SBRACKET, i)

        def RIGHT_SBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(ppGOParser.RIGHT_SBRACKET)
            else:
                return self.getToken(ppGOParser.RIGHT_SBRACKET, i)

        def getRuleIndex(self):
            return ppGOParser.RULE_assigment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssigment" ):
                listener.enterAssigment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssigment" ):
                listener.exitAssigment(self)




    def assigment(self):

        localctx = ppGOParser.AssigmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assigment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(ppGOParser.LITERAL)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ppGOParser.LEFT_SBRACKET:
                self.state = 141
                self.match(ppGOParser.LEFT_SBRACKET)

                self.state = 142
                self.expression()
                self.state = 143
                self.match(ppGOParser.RIGHT_SBRACKET)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==ppGOParser.LEFT_SBRACKET:
                    self.state = 145
                    self.match(ppGOParser.LEFT_SBRACKET)

                    self.state = 146
                    self.expression()
                    self.state = 147
                    self.match(ppGOParser.RIGHT_SBRACKET)




            self.state = 153
            self.match(ppGOParser.EQUAL)
            self.state = 154
            self.expression()
            self.state = 155
            self.match(ppGOParser.SEP_SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ppGOParser.IF, 0)

        def LEFT_PAR(self):
            return self.getToken(ppGOParser.LEFT_PAR, 0)

        def expression(self):
            return self.getTypedRuleContext(ppGOParser.ExpressionContext,0)


        def RIGHT_PAR(self):
            return self.getToken(ppGOParser.RIGHT_PAR, 0)

        def LEFT_BRACKET(self):
            return self.getToken(ppGOParser.LEFT_BRACKET, 0)

        def block(self):
            return self.getTypedRuleContext(ppGOParser.BlockContext,0)


        def RIGHT_BRACKET(self):
            return self.getToken(ppGOParser.RIGHT_BRACKET, 0)

        def elseif(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ppGOParser.ElseifContext)
            else:
                return self.getTypedRuleContext(ppGOParser.ElseifContext,i)


        def elsee(self):
            return self.getTypedRuleContext(ppGOParser.ElseeContext,0)


        def getRuleIndex(self):
            return ppGOParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = ppGOParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(ppGOParser.IF)
            self.state = 158
            self.match(ppGOParser.LEFT_PAR)
            self.state = 159
            self.expression()
            self.state = 160
            self.match(ppGOParser.RIGHT_PAR)
            self.state = 161
            self.match(ppGOParser.LEFT_BRACKET)
            self.state = 162
            self.block()
            self.state = 163
            self.match(ppGOParser.RIGHT_BRACKET)
            self.state = 167
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ppGOParser.ELSEIF:
                self.state = 164
                self.elseif()
                self.state = 169
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==ppGOParser.ELSE:
                self.state = 170
                self.elsee()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseifContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSEIF(self):
            return self.getToken(ppGOParser.ELSEIF, 0)

        def LEFT_PAR(self):
            return self.getToken(ppGOParser.LEFT_PAR, 0)

        def expression(self):
            return self.getTypedRuleContext(ppGOParser.ExpressionContext,0)


        def RIGHT_PAR(self):
            return self.getToken(ppGOParser.RIGHT_PAR, 0)

        def LEFT_BRACKET(self):
            return self.getToken(ppGOParser.LEFT_BRACKET, 0)

        def block(self):
            return self.getTypedRuleContext(ppGOParser.BlockContext,0)


        def RIGHT_BRACKET(self):
            return self.getToken(ppGOParser.RIGHT_BRACKET, 0)

        def getRuleIndex(self):
            return ppGOParser.RULE_elseif

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElseif" ):
                listener.enterElseif(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElseif" ):
                listener.exitElseif(self)




    def elseif(self):
